--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --mode development --watch",
-    "build" :"webpack --mode production"
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
@@ -15,13 +15,18 @@
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "babel-loader": "^9.1.3",
+    "css-loader": "^6.10.0",
+    "file-loader": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "style-loader": "^3.3.4",
     "webpack": "^5.90.2",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "bootstrap": "^5.3.2",
+    "react-bootstrap": "^2.10.1",
     "react-router-dom": "^6.22.0"
   }
 }
