--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "react-bootstrap": "^2.10.1",
     "react-router-dom": "^6.22.0"
