--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@
 /.pnp
 .pnp.js
 /backend/api/__pycache__
+/backend/backend/__pycache__
+/backend/frontend/__pycache__
+/backend/frontend/static/main.js
+/backend/frontend/static/main.js.LICENSE.txt
+
 # testing
 /coverage
 
