--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,12 @@
 /backend/frontend/node_modules
 /.pnp
 .pnp.js
-/backend/api/__pycache__
-/backend/backend/__pycache__
-/backend/frontend/__pycache__
+# /backend/api/__pycache__
+# /backend/backend/__pycache__
+# # /backend/frontend/__pycache__
 /backend/frontend/static/main.js
 /backend/frontend/static/main.js.LICENSE.txt
+**/__pycache__/
 
 # testing
 /coverage
@@ -27,5 +28,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-__pycache__/
-*.pyc
+# __pycache__/
+# *.pyc
