--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -27,7 +27,9 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "multi-range-slider-react": "^2.0.7",
     "react-bootstrap": "^2.10.1",
+    "react-bootstrap-validation": "^0.1.11",
     "react-router-dom": "^6.22.0"
   }
 }
