--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -30,6 +30,8 @@
     "multi-range-slider-react": "^2.0.7",
     "react-bootstrap": "^2.10.1",
     "react-bootstrap-validation": "^0.1.11",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "react-zlib-js": "^1.0.5",
+    "zlib": "^1.0.5"
   }
 }
