--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^5.3.2",
     "helmet": "^7.1.0",
     "react-bootstrap": "^2.10.1",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.22.0"
   }
 }
