--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,15 @@
 /myvenv
 # dependencies
 /backend/frontend/node_modules
+node_modules
 /.pnp
 .pnp.js
 /backend/api/__pycache__
 /backend/backend/__pycache__
 /backend/frontend/__pycache__
-backend/frontend/static/frontend/main.js
-backend/frontend/static/frontend/main.js.LICENSE.txt
+/backend/frontend/static/frontend/main.js
+/backend/frontend/static/frontend/main.js.LICENSE.txt
+/backend/api/migrations/__pycache__
 
 # testing
 /coverage
